# packages/schema-editor-utils/src/semantic-score/models/calculation-details.ts
@@ -1,0 +1,13 @@
+export interface ModelCalculationDetails {
+  modelName: string;
+  score: number;
+  hasAnnotations: boolean;
+  validPropertiesPaths: string[];
+  invalidPropertiesPaths: string[];
+}
+
+export interface Summary {
+  rawModelsCount: number;
+  positiveScoreModelsCount: number;
+  modelsCalculationDetails: ModelCalculationDetails[];
+}
